# single_nubot_gazebo

./: .gitignore  Doxyfile  README  README.md  configure
doc/html/: Angle_8hpp.html  Angle_8hpp_source.html  BallHandleRequest_8h.html  BallHandleRequest_8h_source.html  BallHandleResponse_8h.html  Circle_8hpp.html  (+384 more)
src/: CMakeLists.txt
src/nubot_common/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  nubot.launch  nubot_common.cbp
src/nubot_common/catkin_generated/: nubot_common-msg-extras.cmake.develspace.in  nubot_common-msg-extras.cmake.installspace.in  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/nubot_common/catkin_generated/installspace/: nubot_common.pc  nubot_commonConfig.cmake
src/nubot_common/cmake/: nubot_common-genmsg-context.py  nubot_common-genmsg.cmake
src/nubot_common/core/include/nubot/core/: Angle.hpp  DPoint.hpp  Line.hpp  core.hpp
src/nubot_common/msgs/: BallInfo.msg  CoachInfo.msg  ObstaclesInfo.msg  OminiVisionInfo.msg  ReceiveFromCoach.msg  RobotInfo.msg  StrategyInfo.msg  WorldModelInfo.msg
src/nubot_common/srv/: Shoot.srv
src/nubot_simulation/nubot_description/: package.xml
src/nubot_simulation/nubot_description/meshes/: frame.dae
src/nubot_simulation/nubot_description/models/RoboCup15_MSL_Field/: model.config  model.sdf
src/nubot_simulation/nubot_description/models/RoboCup15_MSL_Goal/: model.config  model.sdf
src/nubot_simulation/nubot_description/models/football/: model.config  model.sdf
src/nubot_simulation/nubot_description/models/nubot/: model.config  model.sdf
(+171 files in other folders)
